# MyBattleShip

./: README.md
battle_ship/: CMakeLists.txt  ExampleShipCoords.txt  build.sh  main.cpp  run.sh
battle_ship/include/: Cell.hpp  CellImagine.hpp  EmptyCell.hpp  Field.hpp  FormatParser.hpp  Game.hpp  Player.hpp  PlayerInterface.hpp  Point.hpp  Ship.hpp  ShipCell.hpp  ShotResult.hpp
battle_ship/src/: Cell.cpp  EmptyCell.cpp  Field.cpp  FormatParser.cpp  Game.cpp  Player.cpp  PlayerInterface.cpp  Point.cpp  Ship.cpp  ShipCell.cpp
